--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
 		<meta name="description" content="Dzaleka Online Service - Your comprehensive platform for accessing refugee services, permits, visas, and community resources in Malawi. Supporting the Dzaleka refugee community with digital solutions." />
 		<meta name="keywords" content="Dzaleka, refugee services, Malawi permits, visa application, community support, legal aid, emergency relief, refugee resources, online services, Dzaleka heritage" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/png" href="/images/dzaleka-digital-heritage.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 
