--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,6 +7,7 @@ const links = {
     { name: 'Events', href: '/events' },
     { name: 'News', href: '/news' },
     { name: 'Resources', href: '/resources' },
+    { name: 'Visit', href: '/visit' },
     { name: 'Applications', href: '/applications' }
   ],
   about: [
