Added a skills exchange platform

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,8 @@ const links = {
     { name: 'News', href: '/news' },
     { name: 'Resources', href: '/resources' },
     { name: 'Visit', href: '/visit' },
-    { name: 'Applications', href: '/applications' }
+    { name: 'Applications', href: '/applications' },
+    { name: 'Skills Exchange', href: '/skills-exchange' }
   ],
   about: [
     { name: 'About Us', href: '/about' },
